--- a/test/ScimPatchForDotnet.UnitTests/ScimPatchForDotnet.UnitTests.csproj
+++ b/test/ScimPatchForDotnet.UnitTests/ScimPatchForDotnet.UnitTests.csproj
@@ -4,7 +4,6 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
     </PropertyGroup>
@@ -23,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\JsonPatchForDotnet\JsonPatchForDotnet.csproj" />
+      <ProjectReference Include="..\..\src\ScimPatchForDotnet\ScimPatchForDotnet.csproj" />
     </ItemGroup>
 
 </Project>
